--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_notifications">Travel</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="albanian_rivera_sllogan">The Albanian Riviera is a stunning stretch of coastline along the Ionian Sea in southern Albania, known for its pristine beaches, crystal-clear waters, picturesque villages, and vibrant nightlife. It typically includes the area from the city of Vlorë in the north to Sarandë in the south, covering several popular destinations.</string>
 </resources>
